# github-trending-digest

./: .gitignore  AGENTS.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_PLAN.md  README.md  RECOMMENDATIONS.md  ai_edition.py  docker-compose.yml  editions.py  generate_unsurfaced_report.py  morning_edition.py  process-caller.sh  process.sh  pyproject.toml  scrape-only.sh  test-gh.sh  trending_digest.py
.github/workflows/: cache-bust.yml
data/legacy_summaries/: gh_daily_summaries_from_docs.jsonl
docs/: 2026-02-02.html  dates.json  index.html  morning.css  pages.json  preference.js  style.css
docs/2026-02-02/: assignments.json  classic.html  index.html
docs/2026-02-03/: assignments.json  classic.html  index.html
docs/2026-02-04/: assignments.json  classic.html  index.html
docs/2026-02-05/: assignments.json  classic.html  index.html
docs/2026-02-06/: assignments.json  classic.html  index.html
docs/2026-02-07/: assignments.json  classic.html  index.html
docs/2026-02-08/: assignments.json  classic.html  index.html
docs/2026-02-09/: assignments.json  classic.html  index.html
docs/2026-02-10/: assignments.json  classic.html  index.html
docs/2026-02-11/: assignments.json  classic.html  index.html
docs/2026-02-12/: assignments.json  classic.html  index.html
docs/2026-02-13/: assignments.json  classic.html  index.html
plans/: 2026-07-19-cross-edition-nav.md
scripts/: build_dates_manifest.py  fix_untitled_dossier.py  inject_day_nav.py  inject_preference_toggle.py
specs/: 2026-07-18-cross-edition-nav-design.md
tests/: test_editions.py
(+1011 files in other folders)
