[project]
name = "github-trending-digest"
version = "0.1.0"
description = "Daily digest of top trending GitHub repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "imap-tools>=1.9.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
]
